コース申込状況：CourseStatusの追加に伴うCRUD処理とテストの追加変更