@@ -4,11 +4,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static raisetech.StudentManagement.testutil.TestDataFactory.createCourseStatusNormal;
+import static raisetech.StudentManagement.testutil.TestDataFactory.createInitCourseStatus;
+import static raisetech.StudentManagement.testutil.TestDataFactory.createStudentCourseNormal;
+import static raisetech.StudentManagement.testutil.TestDataFactory.createStudentNormal;
 
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validation;
 import jakarta.validation.Validator;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -22,11 +25,12 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import raisetech.StudentManagement.controller.StudentController;
+import raisetech.StudentManagement.data.CourseStatus;
 import raisetech.StudentManagement.data.Student;
 import raisetech.StudentManagement.data.StudentCourse;
+import raisetech.StudentManagement.domain.CourseDetail;
 import raisetech.StudentManagement.domain.StudentDetail;
 import raisetech.StudentManagement.service.StudentService;
-import raisetech.StudentManagement.testutil.TestDataFactory;
 import raisetech.StudentManagement.validation.StudentValidation.OnRegisterStudent;
 import raisetech.StudentManagement.validation.StudentValidation.OnUpdate;
 
@@ -58,16 +62,18 @@ class StudentControllerValidationTest {
             .value("1 以上の値にしてください"));
   }
 
+  //Student1
   @Test
   void Studentクラスのバリデーション正常動作テスト() {
-    Student student = TestDataFactory.createStudentNormal(null);
+    Student registerNormalstudent = createStudentNormal(null);
 
-    Set<ConstraintViolation<Student>> violations = validator.validate(student,
+    Set<ConstraintViolation<Student>> violations = validator.validate(registerNormalstudent,
         OnRegisterStudent.class);
 
-    assertThat(violations.size()).isEqualTo(0);
+    assertThat(violations).isEmpty();
   }
 
+  //Student2
   @ParameterizedTest
   @MethodSource("studentValidationErrorCases")
   void Studentクラスのバリデーションエラー動作テスト(Student student, String errorResponse) {
@@ -81,7 +87,7 @@ class StudentControllerValidationTest {
         .containsOnly(errorResponse);
   }
 
-  //Studentのバリデーションエラーテストケース
+  //Student2のバリデーションエラーテストケース
   static Stream<Arguments> studentValidationErrorCases() {
     //studentId,fullName,mailAddress,sex,エラーmessage
     return Stream.of(
@@ -105,16 +111,17 @@ class StudentControllerValidationTest {
     );
   }
 
+  //StudentCourse1
   @Test
   void StudentCourseクラスのバリデーション正常動作テスト() {
-    StudentCourse studentCourse = TestDataFactory.createStudentCourseNormal(999, 999);
-
-    Set<ConstraintViolation<StudentCourse>> violations = validator.validate(studentCourse,
+    StudentCourse updateNormalCourse = createStudentCourseNormal(999, 999);
+    Set<ConstraintViolation<StudentCourse>> violations = validator.validate(updateNormalCourse,
         OnUpdate.class);
 
     assertThat(violations.size()).isEqualTo(0);
   }
 
+  //StudentCourse2
   @ParameterizedTest
   @MethodSource("studentCourseValidationErrorCases")
   void StudentCourse_バリデーションエラー動作テスト(StudentCourse studentCourse,
@@ -128,7 +135,7 @@ class StudentControllerValidationTest {
         .containsOnly(errorMessage);
   }
 
-  //StudentCourseのバリデーションエラーテストケース
+  //StudentCourse2のバリデーションエラーテストケース
   static Stream<Arguments> studentCourseValidationErrorCases() {
     //course,EndDate,エラーメッセージ
     return Stream.of(
@@ -138,12 +145,51 @@ class StudentControllerValidationTest {
     );
   }
 
+  //CourseStatus1
+  @Test
+  void CourseStatus_バリデーション正常動作テスト() {
+    CourseStatus updateNormalStatus = createCourseStatusNormal(999, 999);
+    Set<ConstraintViolation<CourseStatus>> violations = validator.validate(updateNormalStatus,
+        OnUpdate.class);
+
+    assertThat(violations).isEmpty();
+  }
+
+  //CourseStatus2
+  @ParameterizedTest
+  @MethodSource("courseStatusValidationErrorCases")
+  void CourseStatus_バリデーションエラー動作テスト(CourseStatus courseStatus, String errorMessage) {
+    Set<ConstraintViolation<CourseStatus>> violations = validator.validate(courseStatus,
+        OnUpdate.class);
+
+    assertThat(violations.size()).isEqualTo(1);
+    assertThat(violations)
+        .extracting(ConstraintViolation::getMessage)
+        .containsOnly(errorMessage);
+  }
+
+  //CourseStatus2のバリデーションエラーテストケース
+  static Stream<Arguments> courseStatusValidationErrorCases() {
+    return Stream.of(
+        Arguments.of(
+            ValidationTestDataFactory.createCourseStatusWithIncorrectStatus(999, 999),
+            "仮申込,本申込,受講中,受講完了,キャンセル のいずれかを入力してください"
+        ),
+        Arguments.of(
+            ValidationTestDataFactory.createCourseStatusWithFutureProvisionalDate(999, 999),
+            "過去または現在の日付を入力してください。"
+        )
+    );
+  }
+
+  //StudentDetail1
   @ParameterizedTest
   @MethodSource("studentCourseValidationNormalCases")
-  void StudentDetail_バリデーション正常動作テスト(Student student, List<StudentCourse> courseList) {
+  void StudentDetail_バリデーション正常動作テスト(Student student,
+      List<CourseDetail> courseDetailList) {
     StudentDetail studentDetail = new StudentDetail();
     studentDetail.setStudent(student);
-    studentDetail.setStudentCourseList(courseList);
+    studentDetail.setCourseDetailList(courseDetailList);
 
     Set<ConstraintViolation<StudentDetail>> violations =
         validator.validate(studentDetail, OnRegisterStudent.class);
@@ -151,25 +197,27 @@ class StudentControllerValidationTest {
     assertThat(violations.size()).isEqualTo(0);
   }
 
-  //StudentDetailのバリデーション正常テストケース
+  //StudentDetail1のバリデーション正常テストケース
   static Stream<Arguments> studentCourseValidationNormalCases() {
-    Student validStudent = TestDataFactory.createStudentNormal(null);
-    StudentCourse studentCourse = TestDataFactory.createStudentCourseNormal(null, null);
+    Student normalStudent = createStudentNormal(null);
+    StudentCourse normalStudentCourse = createStudentCourseNormal(null, null);
+    CourseDetail normalCourseDetail = new CourseDetail(normalStudentCourse, null);
 
     return Stream.of(
-        Arguments.of(validStudent, null),
-        Arguments.of(validStudent, Collections.emptyList()),
-        Arguments.of(validStudent, List.of(studentCourse))
+        Arguments.of(normalStudent, null),
+        Arguments.of(normalStudent, List.of(normalCourseDetail))
     );
   }
 
+  //StudentDetail2
   @ParameterizedTest
   @MethodSource("studentDetailValidationErrorCases")
-  void StudentDetail_バリデーションエラー動作テスト(Student student, List<StudentCourse> courseList,
+  void StudentDetail_バリデーションエラー動作テスト_(Student student,
+      List<CourseDetail> courseDetailList,
       String errorMessage) {
     StudentDetail studentDetail = new StudentDetail();
     studentDetail.setStudent(student);
-    studentDetail.setStudentCourseList(courseList);
+    studentDetail.setCourseDetailList(courseDetailList);
 
     Set<ConstraintViolation<StudentDetail>> violations =
         validator.validate(studentDetail, OnRegisterStudent.class);
@@ -181,19 +229,69 @@ class StudentControllerValidationTest {
         .containsOnly(errorMessage);
   }
 
-  //StudentDetailのバリデーションエラーテストケース
+  //StudentDetail2のバリデーションエラーテストケース(個別validationの確認と@Valid連携確認)
   private static Stream<Arguments> studentDetailValidationErrorCases() {
+    Student normalStudent = createStudentNormal(null);
+    StudentCourse normalStudentCourse = createStudentCourseNormal(null, null);
+    CourseDetail normalCourseDetail = new CourseDetail(normalStudentCourse, null);
+
     return Stream.of(
         // studentがnull
-        Arguments.of(null, List.of(), "受講生情報は必須です。"),
+        Arguments.of(null, null, "受講生情報は必須です。"),
         // studentのfullNameがnull
         Arguments.of(ValidationTestDataFactory.createStudentForFullNameValidTest(null, null),
-            List.of(),
+            List.of(normalCourseDetail),
             "氏名は必須です。"),
-        // studentCourseのコース名がnull
-        Arguments.of(TestDataFactory.createStudentNormal(null),
-            List.of(ValidationTestDataFactory.createStudentCourseWithNoCourse(null, null)),
-            "コース名は必須です。")
+        // CourseDetailのstudentCourseが空
+        Arguments.of(normalStudent, List.of(new CourseDetail()), "受講コース情報は必須です。")
+    );
+  }
+
+  //CourseDetail1
+  @Test
+  void CourseDetail_バリデーション正常動作テスト() {
+    StudentCourse registerNormalCourse = createStudentCourseNormal(null, null);
+    CourseDetail courseDetail = new CourseDetail(registerNormalCourse, null);
+    Set<ConstraintViolation<CourseDetail>> violations =
+        validator.validate(courseDetail, OnRegisterStudent.class);
+
+    assertThat(violations).isEmpty();
+  }
+
+  //CourseDetail2
+  @ParameterizedTest
+  @MethodSource("courseDetailValidationErrorCases")
+  void CourseDetail_バリデーションエラー動作テスト(StudentCourse studentCourse,
+      CourseStatus courseStatus,
+      String errorMessage) {
+    CourseDetail courseDetail = new CourseDetail(studentCourse, courseStatus);
+
+    Set<ConstraintViolation<CourseDetail>> violations =
+        validator.validate(courseDetail, OnUpdate.class);
+
+    assertThat(violations.size()).isEqualTo(1);
+
+    assertThat(violations)
+        .extracting(ConstraintViolation::getMessage)
+        .containsOnly(errorMessage);
+  }
+
+  //CourseDetail2のバリデーションエラーテストケース(個別validationの確認と@Valid連携確認)
+  private static Stream<Arguments> courseDetailValidationErrorCases() {
+    StudentCourse updateNormalCourse = createStudentCourseNormal(999, 999);
+    CourseStatus updateCourseStatus = createInitCourseStatus(999, 999);
+    return Stream.of(
+        // studentがnull
+        Arguments.of(null, updateCourseStatus, "受講コース情報は必須です。"),
+        Arguments.of(updateNormalCourse, null, "コース申込み状況は必須です。"),
+        // studentのfullNameがnull
+        Arguments.of(ValidationTestDataFactory.createStudentCourseWithNoCourse(999, 999),
+            updateCourseStatus,
+            "コース名は必須です。"),
+        // CourseDetailのstudentCourseが空
+        Arguments.of(updateNormalCourse,
+            ValidationTestDataFactory.createCourseStatusWithFutureProvisionalDate(999, 999),
+            "過去または現在の日付を入力してください。")
     );
   }
 }
